--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "modulasyon_sunum",
+  "name": "modulasyon_teknikleri",
   "version": "0.1.0",
-  "homepage": "https://ahmeterenlacinbala.github.io/modulasyon_sunum",
+  "homepage": "https://ahmeterenlacinbala.github.io/modulasyon_teknikleri",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
